add social icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
@@ -221,11 +222,11 @@
                 </div>
                 <hr>
                 <div class="col-sm-12 d-flex justify-content-between text-white">
-                    <h5 class="col-sm-12 col-md-6 text-white">&copy; 2020 Run this one</h5>
-                    <div>
-                        <span>Facebook</span>
-                        <span>Twitter</span>
-                        <span>LinkedIn</span>
+                    <h5 class="col-sm-12 col-md-6 text-white run-desktop-footer p-0">&copy; 2020 Run This One!</h5>
+                    <div class="run-desktop-social">
+                        <span class="mr-2"><i class="fa fa-facebook"></i></span>
+                        <span class="mr-2"><i class="fa fa-twitter"></i></span>
+                        <span><i class="fa fa-linkedin"></i></span>
                     </div>
                 </div>
             </div>
