--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     </nav>
     <div class="run-desktop text-center">
         <div class="run-desktop-wrapper col-sm-12 col-xs-12  d-inline-block">
-            <h3 class="text-white">Desktop Banner AD #1</h3>
-            <span class="text-white">728 X 90</span>
+            <h3 class="text-white"><span class="run-desktop-header">Desktop</span> Banner AD #1</h3>
+            <span class="text-white run-desktop-header-span">728 X 90</span>
         </div>
     </div>
     <div class="container-fluid run-desktop-cover px-5">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-6 run-desktop-about">
                 <div class="run-desktop-image mx-5 mt-3 mb-2">
                     <img src="images/logo-orange.png" class="img-fluid">
                 </div>
@@ -58,11 +58,36 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 text-center">
-                <div class="mt-3">
+                <div class="mt-3 run-desktop-background">
+                    <div class="run-desktop-shownav">
+                        <div class="run-desktop-shownav-flex">
+                            <div class="run-desktop-shownav-image">
+                                <img src="images/logo-orange.png" class="img-fluid">
+                            </div>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon material-icons">menu</span>
+                                <span class="material-icons run-desktop-shownav-search">search</span>
+                            </button>
+                        </div>
+                        <div class="collapse navbar-collapse run-desktop-shownav-collapse" id="navbarText">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Features</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Pricing</a>
+                                </li>
+                            </ul>
+                            <span class="navbar-text">Navbar text with an inline element</span>
+                        </div>
+                    </div>
                     <h4 class="run-desktop-info d-inline-block text-white mt-5">What Races <span class="run-desktop-small">are you</span> looking for?</h4>
-                    <div class="mt-3 mb-5">
-                        <button class="run-desktop-button mr-5"><span class="run-desktop-select">Select</span></button>
-                        <button class="run-desktop-button mr-5"><span class="run-desktop-select">Select</span></button>
+                    <div class="mt-3 mb-5 run-desktop-buttoncover">
+                        <button class="run-desktop-button run-desktop-coverbtn mr-5"><span class="run-desktop-select">Select</span></button>
+                        <button class="run-desktop-button run-desktop-coverbtn mr-5"><span class="run-desktop-select">Select</span></button>
                         <button class="run-desktop-button"><span class="run-desktop-select">Select</span></button>
                     </div>
                     <form class="form text-center my-2 my-lg-0">
@@ -94,12 +119,12 @@
         </div>
     </div>
     <div class="container-fluid run-desktop-coverage px-5">
-        <div class="mx-5 mb-4">
-            <div class="text-center">
+        <div class="mx-5 mb-4 run-desktop-race">
+            <div class="text-center ">
             <h4 class="run-desktop-info d-inline-block text-secondary mb-5 mt-4">Upcoming races near you</h4>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-3">
+            <div class="row mx-5 run-desktop-cardflex">
+                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/toronto.png" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -117,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/buffalo.jpg" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -134,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/toronto.png" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -152,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/buffalo.jpg" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -179,7 +204,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 run-desktop-divider px-5">
-                <div class="mx-5 mt-5">
+                <div class="mx-5 mt-5 run-desktop-newsletter">
                     <h4 class="run-desktop-information d-inline-block text-white mb-4">Join our Newsletter</h4>
                     <div class="run-desktop-platform mb-5">
                         <div class="run-desktop-slanted">
@@ -204,13 +229,13 @@
     <div class="container-fluid">
         <div class="run-desktop text-center">
             <div class="run-desktop-wrapper col-sm-12 col-xs-12 d-inline-block">
-                <h3 class="text-white">Desktop Banner AD #2</h3>
-                <span class="text-white">728 X 90</span>
+                <h3 class="text-white"><span class="run-desktop-header">Desktop</span> Banner AD #2</h3>
+                <span class="text-white">320 X 50</span>
             </div>
         </div>
     </div>
     <footer>
-        <div class="container-fluid bg-secondary px-5">
+        <div class="container-fluid bg-secondary px-5 run-desktop-footer-container">
             <div class="row px-5">
                 <div class="col-sm-12 col-md-4 text-white text-uppercase my-5">
                     <p>All races</p>
@@ -221,7 +246,7 @@
                     <p>Log in</p>
                 </div>
                 <hr>
-                <div class="col-sm-12 d-flex justify-content-between text-white">
+                <div class="col-sm-12 d-flex justify-content-between text-white run-desktop-footer-social">
                     <h5 class="col-sm-12 col-md-6 text-white run-desktop-footer p-0">&copy; 2020 Run This One!</h5>
                     <div class="run-desktop-social">
                         <span class="mr-2"><i class="fa fa-facebook"></i></span>
