--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
         </div>
     </nav>
     <div class="run-desktop text-center">
-        <div class="run-desktop-wrapper col-sm-12 col-xs-12  d-inline-block">
+        <div class="run-desktop-wrapper col-sm-12 col-xs-12 col-lg-6 col-xl-6 d-inline-block">
             <h3 class="text-white"><span class="run-desktop-header">Desktop</span> Banner AD #1</h3>
             <span class="text-white run-desktop-header-span">728 X 90</span>
         </div>
     </div>
     <div class="container-fluid run-desktop-cover px-5">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 run-desktop-about">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 run-desktop-about">
                 <div class="run-desktop-image mx-5 mt-3 mb-2">
                     <img src="images/logo-orange.png" class="img-fluid">
                 </div>
-                <div class="px-5 mx-5">
+                <div class="px-5 mx-5 run-desktop-border">
                     <h4 class="run-desktop-info d-inline-block text-white mb-4">About us</h4>
                     <p class="run-desktop-text text-white">Launched in the Spring 2014, Marathons and Half Marathons expects to become the go-to resource for runners looking to go 13.1 & beyond. Our unparalleled race calendar will be backed up by magazine-style reviews curated by our team and submitted by workers like you. We'll also be actively encouraging race directors to tell us about their races, which we think will be a really neat way to connect runners and race directors.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                 <div class="mt-3 run-desktop-background">
                     <div class="run-desktop-shownav">
                         <div class="run-desktop-shownav-flex">
@@ -91,13 +91,13 @@
                         <button class="run-desktop-button"><span class="run-desktop-select">Select</span></button>
                     </div>
                     <form class="form text-center my-2 my-lg-0">
-                        <div class="input-group mb-4 col-md-6 mx-auto">
+                        <div class="input-group mb-4 col-md-6 col-lg-6 col-xl-6  mx-auto">
                             <div class="input-group-prepend">
                                 <span class="input-group-text material-icons" id="basic-addon1">room</span>
                             </div>
                             <input class="form-control" type="search" placeholder="City / State / Zip / Race Name" aria-label="Search" aria-describedby="basic-addon1">
                         </div>
-                        <div class="d-flex col-md-6 mx-auto mb-3">
+                        <div class="d-flex col-md-6 col-lg-6 col-xl-6 mx-auto mb-3 run-desktop-form-flex">
                             <div class="input-group mb-3 mr-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text material-icons" id="basic-addon2">calendar_today</span>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
 
-                        <button class="run-desktop-button"><span class="run-desktop-select">Find your race!</span></button>
+                        <button class="run-desktop-button run-desktop-form-button"><span class="run-desktop-select">Find your race!</span></button>
                     </form>
                 </div>
             </div>
@@ -124,7 +124,7 @@
             <h4 class="run-desktop-info d-inline-block text-secondary mb-5 mt-4">Upcoming races near you</h4>
             </div>
             <div class="row mx-5 run-desktop-cardflex">
-                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/toronto.png" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/buffalo.jpg" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/toronto.png" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-3 run-desktop-card-cover">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 run-desktop-card-cover">
                     <div class="card">
                         <img class="card-img-top run-desktop-card-image" src="/images/buffalo.jpg" alt="Card image cap">
                         <div class="run-desktop-placard position-absolute">
@@ -203,7 +203,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 run-desktop-divider px-5">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 run-desktop-divider px-5">
                 <div class="mx-5 mt-5 run-desktop-newsletter">
                     <h4 class="run-desktop-information d-inline-block text-white mb-4">Join our Newsletter</h4>
                     <div class="run-desktop-platform mb-5">
@@ -214,10 +214,10 @@
                     <p class="text-white run-desktop-fresh">Fresh info about races delivered directly to your inbox for a week</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 run-desktop-separator">
-                <div class="mx-5 mt-5">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 run-desktop-separator">
+                <div class="mx-5 mt-5 run-desktop-director">
                     <h4 class="run-desktop-information d-inline-block text-white mb-4 ml-5">Are you a race director?</h4>
-                    <div class="d-block mb-5 ml-5">
+                    <div class="d-block mb-5 ml-5 run-desktop-directory">
                         <button class="col-md-3 d-inline-block run-desktop-cool mr-2"></button>
                         <button class="col-md-3 d-inline-block run-desktop-cool "></button>
                     </div>
@@ -228,7 +228,7 @@
     </div>
     <div class="container-fluid">
         <div class="run-desktop text-center">
-            <div class="run-desktop-wrapper col-sm-12 col-xs-12 d-inline-block">
+            <div class="run-desktop-wrapper col-sm-12 col-xs-12 col-lg-6 col-xl-6 d-inline-block">
                 <h3 class="text-white"><span class="run-desktop-header">Desktop</span> Banner AD #2</h3>
                 <span class="text-white">320 X 50</span>
             </div>
