--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="images/logo-orange.png" class="img-fluid">
                 </div>
                 <div class="px-5 mx-5 run-desktop-border">
-                    <h4 class="run-desktop-info d-inline-block text-white mb-4">About us</h4>
+                    <div class="run-desktop-info d-inline-block text-white mb-4"><h4>About us</h4></div>
                     <p class="run-desktop-text text-white">Launched in the Spring 2014, Marathons and Half Marathons expects to become the go-to resource for runners looking to go 13.1 & beyond. Our unparalleled race calendar will be backed up by magazine-style reviews curated by our team and submitted by workers like you. We'll also be actively encouraging race directors to tell us about their races, which we think will be a really neat way to connect runners and race directors.</p>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                             <span class="navbar-text">Navbar text with an inline element</span>
                         </div>
                     </div>
-                    <h4 class="run-desktop-info d-inline-block text-white mt-5">What Races <span class="run-desktop-small">are you</span> looking for?</h4>
+                    <div class="run-desktop-info d-inline-block text-white mt-5"><h4>What Races <span class="run-desktop-small">are you</span> looking for?</h4></div>
                     <div class="mt-3 mb-5 run-desktop-buttoncover">
                         <button class="run-desktop-button run-desktop-coverbtn mr-5"><span class="run-desktop-select">Select</span></button>
                         <button class="run-desktop-button run-desktop-coverbtn mr-5"><span class="run-desktop-select">Select</span></button>
@@ -121,7 +121,7 @@
     <div class="container-fluid run-desktop-coverage px-5">
         <div class="mx-5 mb-4 run-desktop-race">
             <div class="text-center ">
-            <h4 class="run-desktop-info d-inline-block text-secondary mb-5 mt-4">Upcoming races near you</h4>
+                <div class="run-desktop-info d-inline-block text-secondary mb-5 mt-4"><h4>Upcoming races near you</h4></div>
             </div>
             <div class="row mx-5 run-desktop-cardflex">
                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 run-desktop-card-cover">
