refactor html and styles

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </ul>
         </div>
     </nav>
-    <div class="run-desktop text-center">
-        <div class="run-desktop-wrapper col-sm-12 col-xs-12 col-lg-6 col-xl-6 d-inline-block">
+    <div class="run-desktop d-flex justify-content-center text-center">
+        <div class="run-desktop-wrapper d-flex justify-content-center flex-column col-sm-12 col-xs-12 col-lg-6 col-xl-6">
             <h3 class="text-white"><span class="run-desktop-header">Desktop</span> Banner AD #1</h3>
             <span class="text-white run-desktop-header-span">728 X 90</span>
         </div>
@@ -227,10 +227,10 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="run-desktop text-center">
-            <div class="run-desktop-wrapper col-sm-12 col-xs-12 col-lg-6 col-xl-6 d-inline-block">
+        <div class="run-desktop d-flex justify-content-center text-center">
+            <div class="run-desktop-wrapper d-flex justify-content-center flex-column col-sm-12 col-xs-12 col-lg-6 col-xl-6">
                 <h3 class="text-white"><span class="run-desktop-header">Desktop</span> Banner AD #2</h3>
-                <span class="text-white">320 X 50</span>
+                <span class="text-white run-desktop-header-span">320 X 50</span>
             </div>
         </div>
     </div>
