--- a/index.html
+++ b/index.html
@@ -85,10 +85,19 @@
                         </div>
                     </div>
                     <div class="run-desktop-info d-inline-block text-white mt-5"><h4>What Races <span class="run-desktop-small">are you</span> looking for?</h4></div>
-                    <div class="mt-3 mb-5 run-desktop-buttoncover">
-                        <button class="run-desktop-button run-desktop-coverbtn mr-5"><span class="run-desktop-select">Select</span></button>
-                        <button class="run-desktop-button run-desktop-coverbtn mr-5"><span class="run-desktop-select">Select</span></button>
-                        <button class="run-desktop-button"><span class="run-desktop-select">Select</span></button>
+                    <div class="mt-3 px-5 d-flex justify-content-between align-items-center run-desktop-buttoncover">
+                        <div class="run-desktop-marathon">
+                            <img src="images/full-marathon.png" alt="full-marathon" class="mb-3">
+                            <button class="run-desktop-button run-desktop-coverbtn"><span class="run-desktop-select">Select</span></button>
+                        </div>
+                        <div class="run-desktop-marathon">
+                            <img src="images/half-marathon.png" alt="half-marathon" class="mb-3">
+                            <button class="run-desktop-button run-desktop-coverbtn"><span class="run-desktop-select">Select</span></button>
+                        </div>
+                        <div class="run-desktop-marathon">
+                            <img src="images/notable-prices.png" alt="notable-prices" class="mb-3">
+                            <button class="run-desktop-button run-desktop-coverbtn"><span class="run-desktop-select">Select</span></button>
+                        </div>
                     </div>
                     <form class="form text-center my-2 my-lg-0">
                         <div class="input-group mb-4 col-md-6 col-lg-6 col-xl-6  mx-auto">
